Fix spacing on archive

--- a/css/archive.scss
+++ b/css/archive.scss
@@ -20,7 +20,8 @@
 
 .archive-post {
   padding: 1em .5em;
-  margin-bottom: 1.5em;
+  margin: 0;
+  margin-bottom: 1em;
   background-color: #f9f9f9;
   border: 1px solid #eee;
   min-height: 150px;
